program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2022-04-09 12:17+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: solokot <solokot@gmail.com>, 2019-2022\n"
+"Last-Translator: Andrei Stepanov, 2018-2022\n"
 "Language-Team: Russian (http://www.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -5816,7 +5816,7 @@ msgstr "Изменить код языка"
 #: src/propedit/propedit_cli_parser.cpp:278
 #, no-c-format
 msgid "Edit selectors for properties"
-msgstr "Редактировать селекторы свойств"
+msgstr "Изменить селекторы свойств"
 
 #: src/common/kax_element_names.cpp:281
 #: src/common/kax_element_names.cpp:313
@@ -8890,7 +8890,7 @@ msgstr "Нормальный приоритет"
 #: src/propedit/propedit_cli_parser.cpp:272
 #, no-c-format
 msgid "Normalize all IETF BCP 47 language tags of changed elements to either their canonical form (mode 'canonical'), their extended language subtags form (mode 'extlang') or not at all (mode 'off')"
-msgstr "Нормализовать все языковые теги IETF BCP 47 измененных элементов либо к их канонической форме (режим \"canonical\"), либо к форме их расширенных языковых подтегов (режим \"extlang\"), либо вообще не использовать (режим \"off\")"
+msgstr "Нормализовать все языковые теги IETF BCP 47 изменённых элементов либо к их канонической форме (режим \"canonical\"), либо к форме их расширенных языковых подтегов (режим \"extlang\"), либо вообще не использовать (режим \"off\")"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:313
 #, no-c-format
@@ -14954,7 +14954,7 @@ msgstr "Вы также можете перетащить сюда медиа-ф
 #: src/mkvtoolnix-gui/merge/ask_scan_for_playlists_dialog.cpp:61
 #, no-c-format
 msgid "You can change this value in the preferences."
-msgstr "Вы можете изменить это значение в настройках"
+msgstr "Вы можете изменить это значение в настройках."
 
 #: src/mkvtoolnix-gui/chapter_editor/tool.cpp:338
 #, no-c-format
