program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -1958,9 +1958,9 @@ msgid "&Expand all"
 msgstr "&Expandeix-ho tot"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:383
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "&Extended language subtag:"
-msgstr "Subetiquetes esteses"
+msgstr "Subetiquetes en idioma &estès:"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:698
 #, no-c-format
@@ -2295,7 +2295,7 @@ msgstr "Sup&rimeix l'edició o capítol seleccionat"
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:391
 #, no-c-format
 msgid "&Replace with normalized form"
-msgstr ""
+msgstr "Substitueix amb la fo&rma normalitzada"
 
 #: src/mkvtoolnix-gui/header_editor/value_page.cpp:202
 #, no-c-format
@@ -2742,9 +2742,9 @@ msgstr "«{0}» no és un tall vàlid.\n"
 
 #: src/merge/mkvmerge.cpp:2105
 #: src/propedit/propedit_cli_parser.cpp:224
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "'{0}' is not a valid language normalization mode.\n"
-msgstr "«{0}» no és un codi d'idioma ISO 639-2 vàlid."
+msgstr "'{0}' no és un mode vàlid de normalització de l'idioma.\n"
 
 #: src/merge/mkvmerge.cpp:1528
 #, no-c-format
@@ -3778,12 +3778,12 @@ msgstr "Demana sempre a l'usuari"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:179
 #, no-c-format
 msgid "Always automatically replace with canonical form"
-msgstr ""
+msgstr "Sempre substitueix automàticament amb la forma canònica"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:182
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Always automatically replace with extended language subtags form"
-msgstr "L'etiqueta d'idioma és vàlida."
+msgstr "Sempre substitueix automàticament amb la forma de subetiquetes en idioma estès"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2189
 #, no-c-format
@@ -4431,7 +4431,7 @@ msgstr "No s'ha pogut escriure la pista {0} amb l'ID de còdec «{1}» al fitxer
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:177
 #, no-c-format
 msgid "Canonical form"
-msgstr ""
+msgstr "Forma canònica"
 
 #: src/common/kax_info.cpp:1333
 #: src/common/kax_info.cpp:1337
@@ -6143,9 +6143,9 @@ msgid "Either fix the error or remove the configuration before closing the prefe
 msgstr "Corregiu l'error o bé elimineu la configuració abans de tancar el diàleg de preferències."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:923
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Either the file format or the audio codec is not supported."
-msgstr "La divisió de pistes d'aquest tipus no està admesa."
+msgstr "No s'admet el format de fitxer o el còdec d'àudio."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:334
 #, no-c-format
@@ -6350,9 +6350,9 @@ msgid "Error parsing the tags in '{0}': some mandatory elements are missing.\n"
 msgstr "Error en analitzar les etiquetes a «{0}»: Falten alguns elements obligatoris.\n"
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:934
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Error playing audio"
-msgstr "Error en carregar el fitxer d'ajustaments"
+msgstr "Error en reproduir l'àudio"
 
 #: src/mkvtoolnix-gui/info/tab.cpp:196
 #: src/mkvtoolnix-gui/util/kax_analyzer.cpp:80
@@ -6531,14 +6531,14 @@ msgid "Exports the chapter information in the simple format used in OGM tools (C
 msgstr "Exporta la informació dels capítols en un format senzill emprat en les eines OGM (CHAPTER01=«...» CHAPTER01NAME=«...»)."
 
 #: src/mkvtoolnix-gui/util/language_display_widget.cpp:215
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Extended language subtag"
-msgstr "Subetiquetes esteses"
+msgstr "Subetiquetes en idioma estès"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:180
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Extended language subtags form"
-msgstr "Subetiquetes esteses"
+msgstr "Forma de subetiquetes en idioma estès"
 
 #: src/common/bcp47.cpp:476
 #, no-c-format
@@ -7194,9 +7194,9 @@ msgid "ID"
 msgstr "ID"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2108
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "IETF BCP 47 &normalization mode:"
-msgstr "&Mode predeterminat per a l'edició de l'idioma BCP 47 de l'IETF:"
+msgstr "Mode de &normalització BCP 47 de la IETF:"
 
 #: src/common/iso639.cpp:43
 #, no-c-format
@@ -7690,9 +7690,9 @@ msgid "Information"
 msgstr "Informació"
 
 #: src/mkvtoolnix-gui/forms/util/language_dialog.h:388
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Information & Warnings:"
-msgstr "Informació"
+msgstr "Informació i avisos:"
 
 #: src/common/bitvalue.cpp:76
 #, no-c-format
@@ -8982,7 +8982,7 @@ msgstr "Cap adjunt coincideix amb l'especificació «{0}».\n"
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:931
 #, no-c-format
 msgid "No audio device is available for playback, or accessing it failed."
-msgstr ""
+msgstr "No hi ha cap dispositiu d'àudio disponible per a la reproducció o ha fallat l'accés."
 
 #: src/propedit/propedit.cpp:187
 #, no-c-format
@@ -9172,7 +9172,7 @@ msgstr "Prioritat normal"
 #: src/propedit/propedit_cli_parser.cpp:272
 #, no-c-format
 msgid "Normalize all IETF BCP 47 language tags of changed elements to either their canonical form (mode 'canonical'), their extended language subtags form (mode 'extlang') or not at all (mode 'off')"
-msgstr ""
+msgstr "Normalitzar totes les etiquetes BCP 47 de la IETF dels elements modificats a la seva forma canònica (mode «canonical»), la seva forma de subetiquetes en idioma estès (mode «extlang») o en absolut (mode «off»)"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:313
 #, no-c-format
@@ -10478,12 +10478,12 @@ msgstr "Substitueix l'adjunt amb un nom de fitxer nou i o&btén el nom del tipus
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:178
 #, no-c-format
 msgid "Replace with canonical form once"
-msgstr ""
+msgstr "Substitueix amb la forma canònica una vegada"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:181
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Replace with extended language subtags form once"
-msgstr "L'etiqueta d'idioma és vàlida."
+msgstr "Substitueix amb la forma de subetiquetes en idioma estès una vegada"
 
 #: src/mkvtoolnix-gui/forms/main_window/main_window.h:721
 #, no-c-format
@@ -11993,9 +11993,9 @@ msgid "The attachment ({0}) is too big ({1})."
 msgstr "L'adjunt ({0}) és massa gran ({1})."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:920
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The audio file '%1' could not be played back."
-msgstr "El fitxer d'etiquetes en XML «{0}» no s'ha pogut llegir.\n"
+msgstr "No s'ha pogut reproduir el fitxer d'àudio «%1»."
 
 #: src/mkvtoolnix-gui/util/settings.cpp:296
 #, no-c-format
@@ -12011,7 +12011,7 @@ msgstr "La sincronització de l'àudio/vídeo es pot haver perdut."
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:487
 #, no-c-format
 msgid "The canonical form does use a suitable prefix."
-msgstr ""
+msgstr "La forma canònica empra un prefix adequat."
 
 #: src/propedit/propedit.cpp:169
 #, no-c-format
@@ -12087,17 +12087,17 @@ msgstr "La capçalera del fitxer de correcció no es pot llegir correctament.\n"
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:501
 #, no-c-format
 msgid "The corresponding canonical & extended language subtags forms are: %1."
-msgstr ""
+msgstr "Les corresponents formes de subetiquetes en idioma canònic i estès són: %1."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:506
 #, no-c-format
 msgid "The corresponding canonical form is: %1."
-msgstr ""
+msgstr "La forma canònica corresponent és: %1."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:511
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The corresponding extended language subtags form is: %1."
-msgstr "L'etiqueta d'idioma és vàlida."
+msgstr "La forma de subetiquetes en idioma estès corresponent és: %1."
 
 #: src/merge/output_control.cpp:1627
 #, no-c-format
@@ -12266,19 +12266,19 @@ msgid "The error message was:"
 msgstr "El missatge d'error ha estat:"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:451
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The extended language subtag '%1' is deprecated."
-msgstr "L'etiqueta d'idioma és vàlida."
+msgstr "La subetiqueta en idioma estès «%1» està obsoleta."
 
 #: src/common/bcp47.cpp:448
 #, no-c-format
 msgid "The extended language subtag '{}' must only be used with one of the following prefixes: {}."
-msgstr "La subetiqueta d'idioma estès «{}» només s'ha d'usar amb un dels prefixos següents: {}."
+msgstr "La subetiqueta en idioma estès «{}» només s'ha d'usar amb un dels prefixos següents: {}."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:490
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The extended language subtags form does use a suitable prefix."
-msgstr "L'etiqueta d'idioma és vàlida."
+msgstr "La forma de les subetiquetes en idioma estès empra un prefix adequat."
 
 #: src/output/p_mpeg4_p2.cpp:360
 #, no-c-format
@@ -12708,9 +12708,9 @@ msgid "The job has been added to the job queue."
 msgstr "La tasca ha estat afegida a la cua de treball."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:446
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The language '%1' is deprecated."
-msgstr "L'etiqueta d'idioma és vàlida."
+msgstr "L'idioma «%1» està obsolet."
 
 #: src/input/r_usf.cpp:106
 #, no-c-format
@@ -13041,9 +13041,9 @@ msgid "The recognized format is 'YYYY-mm-ddTHH:MM:SS+zz:zz': the year, month, da
 msgstr "El format reconegut és «AAAA-mm-ddTHH:MM:SS+zz:zz»: l'any, mes, dia, lletra «T», hores, minuts, segons i el fus horari en funció de la UTC. Exemple: 2017-03-28T17:28:00-02:00."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:466
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The region '%1' is deprecated."
-msgstr "El fitxer «%1» ja existeix."
+msgstr "La regió «%1» està obsoleta."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:223
 #, no-c-format
@@ -13071,9 +13071,9 @@ msgid "The sample rate of the two audio tracks is different: {0} and {1}"
 msgstr "La freqüència de mostreig de les dues pistes d'àudio és diferent: {0} i {1}"
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:456
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The script '%1' is deprecated."
-msgstr "El fitxer «%1» ja existeix."
+msgstr "L'script «%1» està obsolet."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:460
 #, no-c-format
@@ -13380,7 +13380,7 @@ msgstr "El valor «{}» no és un codi de nombre de país M.49 de les NU."
 #: src/common/bcp47.cpp:301
 #, no-c-format
 msgid "The value '{}' is not part of the IANA Language Subtag Registry for extended language subtags."
-msgstr "El valor «{}» no forma part del Registre de subetiquetes d'idioma de la IANA per a les subetiquetes d'idioma estès."
+msgstr "El valor «{}» no forma part del Registre de subetiquetes d'idioma de la IANA per a les subetiquetes en idioma estès."
 
 #: src/common/bcp47.cpp:316
 #, no-c-format
@@ -13421,19 +13421,19 @@ msgid "The values will be available for easy selection in the multiplexer."
 msgstr "Els valors estaran disponibles per a facilitar la selecció des del multiplexador."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:472
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "The variant '%1' is deprecated."
-msgstr "El fitxer «%1» ja existeix."
+msgstr "La variant «%1» està obsoleta."
 
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:483
 #, no-c-format
 msgid "The variant '%1' is used with prefixes that aren't suited for it. Suitable prefixes are: %2."
-msgstr ""
+msgstr "La variant «%1» s'usa amb prefixos que no estan adaptats per a això. Els prefixos adequats són: %2."
 
 #: src/common/bcp47.cpp:460
 #, no-c-format
 msgid "The variant '{}' occurs more than once."
-msgstr ""
+msgstr "La variant «{}» es produeix més d'una vegada."
 
 #: src/mkvtoolnix-gui/main_window/main_window.cpp:751
 #, no-c-format
@@ -13690,7 +13690,7 @@ msgstr "Això és d'utilitat per als casos de discos Blu-ray, en els quals exist
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:495
 #, no-c-format
 msgid "This language tag is a grandfathered element only supported for historical reasons."
-msgstr ""
+msgstr "Aquesta etiqueta d'idioma és un element que només s'admet per motius històrics."
 
 #: src/mkvtoolnix-gui/main_window/prefs_run_program_widget.cpp:100
 #, no-c-format
@@ -15370,7 +15370,7 @@ msgstr "Botons"
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:843
 #, no-c-format
 msgid "canonical form"
-msgstr ""
+msgstr "Forma canònica"
 
 #: src/common/kax_info.cpp:635
 #, no-c-format
@@ -15464,9 +15464,9 @@ msgid "equirectangular"
 msgstr "Equirectangular"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:844
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "extended language subtags form"
-msgstr "L'etiqueta d'idioma és vàlida."
+msgstr "Forma de subetiquetes en idioma estès"
 
 #: src/merge/output_control.cpp:439
 #, no-c-format
@@ -15914,9 +15914,9 @@ msgid "no language selected"
 msgstr "no s'ha seleccionat cap idioma"
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:842
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "no normalization"
-msgstr "Informació"
+msgstr "Sense normalització"
 
 #: src/common/kax_info.cpp:824
 #, no-c-format
