man page translations: update Catalan

--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -2033,16 +2033,14 @@ msgstr "Normalment, el &mkvmerge; escriurà els elements nous d'idioma BCP 47 de
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:559
 #: doc/man/mkvpropedit.xml:402
-#, fuzzy
-#| msgid "<option>--ui-language</option> <parameter>code</parameter>"
 msgid "<option>--normalize-language-ietf</option> <parameter>mode</parameter>"
-msgstr "<option>--ui-language</option> <parameter>codi</parameter>"
+msgstr "<option>--normalize-language-ietf</option> <parameter>mode</parameter>"
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:562
 #: doc/man/mkvpropedit.xml:405
 msgid "Enables normalizing all IETF BCP 47 language tags to either their canonical form with mode '<literal>canonical</literal>', to their extended language subtags form with mode '<literal>extlang</literal>' or turns it off with mode '<literal>off</literal>'. By default normalization to the canonical form is applied."
-msgstr ""
+msgstr "Permet normalitzar totes les etiquetes d'idioma BCP 47 de la IETF a la seva forma canònica amb el mode «<literal>canonical</literal>», a la seva forma d'idioma estès amb el mode «<literal>extLang</literal>» o la desactiva amb el mode «<literal>off</literal>». Per defecte, s'aplicarà la normalització a la forma canònica."
 
 #. type: Content of: <refentry><refsect1><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:568
