program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -699,17 +699,17 @@ msgstr ""
 "                           d'origen.\n"
 
 #: src/merge/mkvmerge.cpp:145
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --normalize-language-ietf <canonical|extlang|off>\n"
 "                           Normalize all IETF BCP 47 language tags to either\n"
 "                           their canonical or their extended language subtags\n"
 "                           form or not at all (default: canonical form).\n"
 msgstr ""
-"  --probe-range-percentage <percentatge>\n"
-"                           Defineix la mida màxima per a provar les pistes\n"
-"                           en el percentatge de la mida total del fitxer\n"
-"                           per a certs tipus de fitxers (per omissió: 0,3).\n"
+"  --normalize-language-ietf <canonical|extlang|off>\n"
+"                           Normalitza totes les etiquetes d'idioma BCP 47 de la\n"
+"                           IETF a les seves subetiquetes canòniques, en idioma\n"
+"                           estès o en absolut (per defecte: forma canònica).\n"
 
 #: src/merge/mkvmerge.cpp:260
 #, no-c-format
@@ -13078,7 +13078,7 @@ msgstr "L'script «%1» està obsolet."
 #: src/mkvtoolnix-gui/util/language_dialog.cpp:460
 #, no-c-format
 msgid "The script '%1' should not be used for the language '%2' as it is the script the overwhelming majority of documents for this language is written in."
-msgstr ""
+msgstr "L'script «%1» no s'ha d'emprar per a l'idioma «%2», ja que és l'script amb el que s'ha escrit la majoria aclaparadora dels documents per a aquest idioma."
 
 #: src/extract/extract_cli_parser.cpp:91
 #, no-c-format
