program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -14727,9 +14727,9 @@ msgid "Video: colour range"
 msgstr "Video: rango de color"
 
 #: src/common/property_element.cpp:174
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: horizontal Cb subsampling"
-msgstr "Submuestreo horizontal de Cb"
+msgstr "Vídeo: submuestreo Cb horizontal"
 
 #: src/common/property_element.cpp:176
 #, no-c-format
@@ -14737,9 +14737,9 @@ msgid "Video: horizontal chroma siting"
 msgstr "Video: posición crominancia horizontal"
 
 #: src/common/property_element.cpp:172
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: horizontal chroma subsampling"
-msgstr "Video: posición crominancia horizontal"
+msgstr "Video: submuestreo croma horizontal"
 
 #: src/common/property_element.cpp:181
 #, no-c-format
@@ -14792,9 +14792,9 @@ msgid "Video: transfer characteristics"
 msgstr "Video: características de transferencia"
 
 #: src/common/property_element.cpp:175
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: vertical Cb subsampling"
-msgstr "Submuestreo vertical de Cb"
+msgstr "Vídeo: submuestreo Cb vertical"
 
 #: src/common/property_element.cpp:177
 #, no-c-format
@@ -14802,9 +14802,9 @@ msgid "Video: vertical chroma siting"
 msgstr "Video: posición crominancia vertical"
 
 #: src/common/property_element.cpp:173
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: vertical chroma subsampling"
-msgstr "Video: posición crominancia vertical"
+msgstr "Video: submuestreo croma vertical"
 
 #: src/common/property_element.cpp:192
 #, no-c-format
