man page translations: update French

--- a/doc/man/po4a/po/fr.po
+++ b/doc/man/po4a/po/fr.po
@@ -3202,7 +3202,7 @@ msgstr "La quantité de pixels à retirer dans les canaux Cr et Cb pour chaque p
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1851
 msgid "Example: For video with 4:2:0 chroma subsampling, the parameter should be set to <code><parameter>TID</parameter>:<constant>1</constant>,<constant>1</constant></code>."
-msgstr "Exemple : pour une vidéo avec un sous-échantillonnage chroma 4:2:0, le paramètre devrait être défini à <code><parameter>TID</parameter>:<constant>1</constant>,<constant>1</constant></code>."
+msgstr "Exemple : pour une vidéo avec un sous-échantillonnage chroma 4:2:0, le paramètre devrait être défini à <code><parameter>TID</parameter>:<constant>1</constant>,<constant>1</constant></code>."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1858
@@ -3212,12 +3212,12 @@ msgstr "<option>--cb-subsample</option> <parameter>TID:hori,vert</parameter>"
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1861
 msgid "The amount of pixels to remove in the Cb channel for every pixel not removed horizontally/vertically. This is additive with <option>--chroma-subsample</option>."
-msgstr "La quantité de pixels à retirer dans les canaux Cr et Cb pour chaque pixel non retiré horizontalement/verticalement. Cela s'additionne à <option>--chroma-subsample</option>."
+msgstr "La quantité de pixels à retirer dans les canaux Cr et Cb pour chaque pixel non retiré horizontalement/verticalement. Ceci s'additionne à <option>--chroma-subsample</option>."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:1866
 msgid "Example: For video with 4:2:1 chroma subsampling, the parameter <option>--chroma-subsample</option> should be set to <code><parameter>TID</parameter>:<constant>1</constant>,<constant>0</constant></code> and Cb-subsample should be set to <code><parameter>TID</parameter>:<constant>1</constant>,<constant>0</constant></code>."
-msgstr "Exemple : pour une vidéo avec un sous-échantillonnage chroma 4:2:1, le paramètre <option>--chroma-subsample</option> devrait être défini à <code><parameter>TID</parameter>:<constant>1</constant>,<constant>0</constant></code> et Cb-subsample devrait être défini à <code><parameter>TID</parameter>:<constant>1</constant>,<constant>0</constant></code>."
+msgstr "Exemple : pour une vidéo avec un sous-échantillonnage chroma 4:2:1, le paramètre <option>--chroma-subsample</option> devrait être défini à <code><parameter>TID</parameter>:<constant>1</constant>,<constant>0</constant></code> et Cb-subsample devrait être défini à <code><parameter>TID</parameter>:<constant>1</constant>,<constant>0</constant></code>."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:1874
