--- a/po/fr.po
+++ b/po/fr.po
@@ -180,7 +180,7 @@ msgstr ""
 "  --cb-subsample <TID:hori,vert>\n"
 "                           Le nombre de pixels à retirer du canal Cb\n"
 "                           pour chaque pixel non retiré horizontalement\n"
-"                           et verticalement. Cela vient en addition de\n"
+"                           et verticalement. Ceci s'additionne à\n"
 "                           --chroma-subsample.\n"
 
 #: src/merge/mkvmerge.cpp:100
@@ -7101,7 +7101,7 @@ msgstr "Priorité la plus haute"
 #: src/common/kax_element_names.cpp:129
 #, no-c-format
 msgid "Horizontal Cb subsample"
-msgstr "Sous-échantillonnage Cb horizontale"
+msgstr "Sous-échantillonnage Cb horizontal"
 
 #: src/common/kax_element_names.cpp:131
 #, no-c-format
@@ -11856,12 +11856,12 @@ msgstr "Le fichier XML de balises « {0} » est illisible.\n"
 #: src/common/property_element.cpp:174
 #, no-c-format
 msgid "The amount of pixels to remove in the Cb channel for every pixel not removed horizontally. This is additive with chroma-subsample-horizontal."
-msgstr "Le nombre de pixels à retirer du canal Cb pour chaque pixel non retiré horizontalement. Ceci est additif avec chroma-subsample-horizontal."
+msgstr "Le nombre de pixels à retirer du canal Cb pour chaque pixel non retiré horizontalement. Ceci s'additionne à « chroma-subsample-horizontal »."
 
 #: src/common/property_element.cpp:175
 #, no-c-format
 msgid "The amount of pixels to remove in the Cb channel for every pixel not removed vertically. This is additive with chroma-subsample-vertical."
-msgstr "Le nombre de pixels à retirer du canal Cb pour chaque pixel non retiré verticalement. Ceci est additif avec chroma-subsample-vertical."
+msgstr "Le nombre de pixels à retirer du canal Cb pour chaque pixel non retiré verticalement. Ceci s'additionne à « chroma-subsample-vertical »."
 
 #: src/common/property_element.cpp:172
 #, no-c-format
@@ -14474,7 +14474,7 @@ msgstr "Version %1 « %2 »"
 #: src/common/kax_element_names.cpp:130
 #, no-c-format
 msgid "Vertical Cb subsample"
-msgstr "Sous-échantillonnage Cb verticale"
+msgstr "Sous-échantillonnage Cb vertical"
 
 #: src/common/kax_element_names.cpp:132
 #, no-c-format
@@ -14611,32 +14611,32 @@ msgstr "Vidéo : bits par canal de couleur"
 #: src/common/property_element.cpp:190
 #, no-c-format
 msgid "Video: chromaticity blue X"
-msgstr "Vidéo : chromaticité bleu X"
+msgstr "Vidéo : chromaticité bleu X"
 
 #: src/common/property_element.cpp:191
 #, no-c-format
 msgid "Video: chromaticity blue Y"
-msgstr "Vidéo : chromaticité bleu Y"
+msgstr "Vidéo : chromaticité bleu Y"
 
 #: src/common/property_element.cpp:188
 #, no-c-format
 msgid "Video: chromaticity green X"
-msgstr "Vidéo : chromaticité vert X"
+msgstr "Vidéo : chromaticité vert X"
 
 #: src/common/property_element.cpp:189
 #, no-c-format
 msgid "Video: chromaticity green Y"
-msgstr "Vidéo : chromaticité vert Y"
+msgstr "Vidéo : chromaticité vert Y"
 
 #: src/common/property_element.cpp:186
 #, no-c-format
 msgid "Video: chromaticity red X"
-msgstr "Vidéo : chromaticité rouge X"
+msgstr "Vidéo : chromaticité rouge X"
 
 #: src/common/property_element.cpp:187
 #, no-c-format
 msgid "Video: chromaticity red Y"
-msgstr "Vidéo : chromaticité rouge Y"
+msgstr "Vidéo : chromaticité rouge Y"
 
 #: src/common/property_element.cpp:170
 #, no-c-format
@@ -14654,19 +14654,19 @@ msgid "Video: colour range"
 msgstr "Vidéo : plage de couleurs"
 
 #: src/common/property_element.cpp:174
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: horizontal Cb subsampling"
-msgstr "Sous-échantillonnage Cb horizontale"
+msgstr "Vidéo : sous-échantillonnage Cb horizontal"
 
 #: src/common/property_element.cpp:176
 #, no-c-format
 msgid "Video: horizontal chroma siting"
-msgstr "Vidéo : position de la chroma horizontale"
+msgstr "Vidéo : position de la chroma horizontale"
 
 #: src/common/property_element.cpp:172
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: horizontal chroma subsampling"
-msgstr "Vidéo : position de la chroma horizontale"
+msgstr "Vidéo : sous-échantillonnage chroma horizontale"
 
 #: src/common/property_element.cpp:181
 #, no-c-format
@@ -14719,19 +14719,19 @@ msgid "Video: transfer characteristics"
 msgstr "Vidéo : caractéristiques du transfert"
 
 #: src/common/property_element.cpp:175
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: vertical Cb subsampling"
-msgstr "Sous-échantillonnage Cb verticale"
+msgstr "Vidéo : sous-échantillonnage Cb vertical"
 
 #: src/common/property_element.cpp:177
 #, no-c-format
 msgid "Video: vertical chroma siting"
-msgstr "Vidéo : position de la chroma verticale"
+msgstr "Vidéo : position de la chroma verticale"
 
 #: src/common/property_element.cpp:173
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Video: vertical chroma subsampling"
-msgstr "Vidéo : position de la chroma verticale"
+msgstr "Vidéo : sous-échantillonnage chroma verticale"
 
 #: src/common/property_element.cpp:192
 #, no-c-format
